<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shell_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configurations for the Shell ROV system</description>
  <maintainer email="roboayushh@gmail.com">auv24</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>joy</exec_depend>
  
  <exec_depend>shell_control</exec_depend>
  <exec_depend>shell_bridge</exec_depend>
  <exec_depend>shell_messages</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>